new article - jsa review

--- a/about/index.html
+++ b/about/index.html
@@ -107,12 +107,12 @@
 
 <p><code>The God Delusion</code>, and <code>A Tree Grows in Brooklyn</code>. You can see the list of books that I have read or I am reading on my <a href="https://www.goodreads.com/user/show/25479921-shivanshu-agrawal">goodreads profile</a>. I also like to watch lots of movies/tv-series/anime in my free time and have a propensity towards binge-watching entire tv-series or an anime.</p>
 
-<h3 id="blog-name:6083a88ee3411b0d17ce02d738f69d47">Blog Name?</h3>
+<h3 id="blog-name">Blog Name?</h3>
 
 <p>Why <code>ninjaduck</code>?<br />
  It is an offbeat unconventional name, hence feels more personal and sounds cool. It also has a story behind it which the world will never know.</p>
 
-<h3 id="favorites:6083a88ee3411b0d17ce02d738f69d47">Favorites</h3>
+<h3 id="favorites">Favorites</h3>
 
 <ul>
 <li>OS - Arch Linux</li>
