--- a/books/world-undone/index.html
+++ b/books/world-undone/index.html
@@ -130,7 +130,7 @@
 
 <p>Reading this book made me realize how big a calamity the World War I was and how utterly ignorant about its scope, its scale, the politics involved and finally, the outcome. In the world where everyone was convinced that any war would be a short and quick affair lasting for not more than a few months, this war lasted for four years due to technology and scale of operation made possible by the industrial revolution. A lot of people died in warfare, the newly invented machine guns playing a large role in the massacre of soldiers. The scope of this war can be gauged from the fact that over 17 million people died in it, out of which 11 million were soldiers. About 4% of the population of Germany died in the war which is 1 out of every 25 German citizens.</p>
 
-<h2 id="events-that-led-to-war:75e216680516a6bb0b1de85e6608581e">Events That led to War</h2>
+<h2 id="events-that-led-to-war">Events That led to War</h2>
 
 <p>The war was fought between Germany, Austria-Hungary and the Ottoman Empire on one side, together known as the Central Powers and the Great Britain, France and Russia on the other side, together known as the Entente. Other smaller nation joined the war as it progressed, but these were the major players. The events that led to the war was assassination of Crown Prince of the Austro-Hungarian Empire by Serbian terrorists.Due to this, Austria-Hungary and its ally Germany declared war on Serbia. To protect Serbia, Russia declared war on Germany and Austria-Hungary. France, having signed a previous agreement with Russia to enter a war together against any other European nation, also joined the war. Britain declared war on Germany because it invaded a neutral country - Belgium on its way to France and it had guaranteed Belgium&rsquo;s neutrality in a previous treaty.</p>
 
@@ -138,15 +138,15 @@
 
 <p>Even days before the war, the leaders of the nations thought that a World War could be avoided, a compromise between Serbia and Austria-Hungary could be reached so no one took the situation very seriously.</p>
 
-<h2 id="the-domination-of-germany:75e216680516a6bb0b1de85e6608581e">The Domination of Germany</h2>
+<h2 id="the-domination-of-germany">The Domination of Germany</h2>
 
 <p>In the first few months of the war, Germany showed its military strength by taking on the British, French and Russia combined on multiple fronts with very little help from Austria-Hungary and the Ottoman Empire. War showed Austria-Hungary to be a weak and decaying Empire and at the end of it, Austria-Hungary broke apart. Germany was able to fight for 4 years before it was overwhelmed by the entry of USA into the war in 1918 and unable to continue. Contrary to the popular thinking before the war, none of the armies were able to achieve a major breakthrough, capable of ending the war, they were striving for. All the while people kept on dying in the war by using outdated military tactics against the new machine guns. The war also introduced chemical warfare where armies tried to use Chlorine and Phosgene on the opponents.</p>
 
-<h2 id="propaganda-during-the-war:75e216680516a6bb0b1de85e6608581e">Propaganda during the War</h2>
+<h2 id="propaganda-during-the-war">Propaganda during the War</h2>
 
 <p>One interesting thing about the war was the propaganda fed to the general public of the warring nations. To gain the approval of the public so that nations can continue the war at the cost of deteriorating living conditions, each side tried to vilify the opponent and prove the justness in their own cause. This made it difficult to hold peace talks during the war (a compromise meant shying away from the just cause and losing face to the public) and end it without completely defeating the opponent. Also, the people on the losing side felt terribly wronged while the winning nations felt justified in demanding heavy penalty from the opponents which laid the foundation for the Second World War.</p>
 
-<h2 id="the-result:75e216680516a6bb0b1de85e6608581e">The Result</h2>
+<h2 id="the-result">The Result</h2>
 
 <p>In the end, the Entente Won, and through the treaty of Versailles imposed heavy financial reparations on Germany, put restrictions on the size of its army, took away some parts of its territories, broke the Ottoman Empire and divided it amongst themselves. Germany was a monarchy before war. During the last year of war, the Kaiser(king of Germany) Wilhelm II was forced to abdicate the throne. Austria-Hungary also broke apart. There was a revolution in Russia, the monarchy was abolished and the Tsar and Tsarina executed along with their children. In a power struggle that followed, Bolsheviks gained power and established the Soviet Union.</p>
 
